<resources>
    <string name="app_name">Smartjob Timepad</string>
    <string name="smartjob_timepad">Smartjob timepad</string>
    <string name="kirish_uchun_telefon_raqamingizni_kiriting">Kirish uchun telefon raqamingizni kiriting</string>
    <string name="telefon_raqam">Telefon raqam</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="smartjob">Smartjob</string>
    <string name="kirish">Kirish</string>
    <string name="ro_yhatdan_o_tish">Ro`yhatdan o`tish</string>
    <string name="davlatni_tanlang">Davlatni tanlang</string>
    <string name="pochtani_kiriting">Pochtani kiriting</string>
    <string name="elektron_pochta">Elektron pochta</string>
    <string name="nom">Nom</string>
    <string name="sohasi">Sohasi</string>
    <string name="xodimlar_soni">Xodimlar soni</string>
    <string name="davom_etish">Davom etish</string>
    <string name="sayt_foydalanish_shartlari_va_maxfiylik_nsiyosati_bilan_tanishdim">Sayt foydalanish shartlari va maxfiylik\nsiyosati bilan tanishdim</string>
    <string name="o_zbekiston">O`zbekiston</string>
    <string name="tashkilot_nomi">Tashkilot nomi</string>
    <string name="fio">FIO</string>
    <string name="fio_ni_kiriting">FIO ni kiriting</string>
    <string name="parol_kiriting">Parol kiriting</string>
    <string name="parol">Parol</string>
    <string name="parolni_qayta_kiriting">Parolni qayta kiriting</string>
    <string name="raqamiga_sms_yuborildi">raqamiga sms yuborildi</string>
    <string name="parolni_tiklash">Parolni tiklash</string>
    <string name="telefon_raqamini_kiriting">Telefon raqamini kiriting:</string>
    <string name="kodni_kiriting">Kodni kiriting:</string>
    <string name="faollashtirish_kodi">Faollashtirish kodi</string>
    <string name="tasdiqlash">Tasdiqlash</string>
    <string name="kodni_yana_yuboring">Kodni yana yuboring</string>
    <string name="kodni_olish_uchun_telefon_raqami_talab_qilinadi_sms_orqali">Kodni olish uchun telefon raqami talab qilinadi SMS orqali</string>
    <string name="qr_kod_orqali_kirish">QR kod orqali kirish</string>
    <string name="smartjob_attandance">Smartjob attandance</string>
    <string name="fece_id">Fece ID</string>
    <string name="pin_kod_va_parol">Pin kod va parol</string>
    <string name="qr_kodni_scannerlash">QR kodni scannerlash</string>
    <string name="info">Info</string>
    <string name="pin_kod_va_parolni_kiriting">Pin kod va parolni kiriting</string>
    <string name="pin_kod">Pin kod</string>
    <string name="pin_kodni_kiring">Pin kodni kiring</string>
    <string name="chiqish">Chiqish</string>
    <string name="kirish_vaqti">Kirish vaqti</string>
    <string name="kirish_09_00">Kirish - 09:00</string>
    <string name="chiqish_18_00">Chiqish - 18:00</string>
    <string name="rahmat">Rahmat</string>
    <string name="o_z_vaqtida">O`z vaqtida</string>
    <string name="yuzinggizni_ramkaga_nto_g_rilang_va_qimirlamang">Yuzinggizni ramkaga\nto`g`rilang va qimirlamang</string>
    <string name="to_g_ri_oldinga_qarang">To`g`ri oldinga qarang</string>
    <string name="qidrish">Qidrish</string>
    <string name="mamlakatni_tanlang">Mamlakatni tanlang</string>
    <string name="xabar_jo_natish">Xabar jo\'natish</string>
    <string name="operator_bilan_bog_lanish">Operator bilan bog’lanish</string>
</resources>