<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".login.fragments.paswordreconver.CreateNewPasswordFragment">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fonts_jaldi_bold"
            android:maxLines="1"
            android:text="@string/smartjob"
            android:textSize="@dimen/txt_42sp" />
    </LinearLayout>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/pm_10dp"
        android:background="@drawable/bg_line_radius"
        android:gravity="center"
        android:maxWidth="100dp"
        android:minWidth="330dp"
        android:orientation="vertical"
        android:padding="@dimen/pm_20dp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/parolni_tiklash"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_18sp"
                android:textStyle="bold" />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/pm_20dp"
                android:text="@string/parol_kiriting"
                android:textColor="#1f1f1f" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/pm_10dp"
                android:background="@drawable/bg_line_radius2"
                android:gravity="center_vertical"
                android:paddingHorizontal="@dimen/pm_10dp">


                <EditText
                    android:padding="@dimen/pm_10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:hint="@string/parol"
                    android:textSize="@dimen/txt_18sp"
                    android:maxLines="1" />

            </androidx.appcompat.widget.LinearLayoutCompat>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/pm_20dp"
                android:text="@string/parolni_qayta_kiriting"
                android:textColor="#1f1f1f" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/pm_10dp"
                android:background="@drawable/bg_line_radius2"
                android:gravity="center_vertical"
                android:paddingHorizontal="@dimen/pm_10dp">


                <EditText
                    android:padding="@dimen/pm_10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:hint="@string/parol"
                    android:textSize="@dimen/txt_18sp"
                    android:maxLines="1" />

            </androidx.appcompat.widget.LinearLayoutCompat>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/pm_20dp"
                android:background="@drawable/bg_btn_next"
                android:elevation="@dimen/pm_0dp"
                android:fontFamily="@font/fonts_inter2"
                android:text="@string/tasdiqlash"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/txt_18sp"
                android:textStyle="normal"
                app:elevation="@dimen/pm_0dp" />

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>